2004-05-07 Kalle Wallin <kaw@linux.se>
	* Redesigned ncmpc's color support - view the manual for details!
	* Added support for moving songs in a playlist (move-up, move-down)
	* options.c: added new command line options --config and --key-file,
	             wide_cursor is now enabled by default
	* screen.c: scroll long song titles in the status window,
	            dont display volume changes in the status window.
	
2004-05-03 Kalle Wallin <kaw@linux.se>
	* configure.ac: display default values for --enable-x, 
			version updated to 0.10.2-svn
	* conf.c: The background color can now be assigned to 'none'.

2004-04-26 Kalle Wallin <kaw@linux.se>
	* ncmpc-0.10.1 released (r892)

2004-04-23 Kalle Wallin <kaw@linux.se>
	* Updated Changelog, TODO, NEWS and the manual page.
	* screen_play.c:  Make shure the cursor stays on the same row when 
	                  deleting a playlist entry.
	* screen.c: Turn off LINE_COLORS after drawing the top line.
     

2004-04-22 Kalle Wallin <kaw@linux.se>
	* Added smart delete and add (#0000220), at the moment only used 
	        when deleting or adding a single song.
	* mpc.c: make shure selections in the browse screen is updated 
	         when the playlist updated
	  
	
2004-04-21 Kalle Wallin <kaw@linux.se>
	* Fixed resize handling (SIGWINCH), problems may still occur when
	  ncmpc is inside some of ncurses [w]getstr functions.
	
2004-04-20 Kalle Wallin <kaw@linux.se>
	* Added support for seeking 
	* Added crossfade support
	* screen.c: Display mpd flags on the second row [rzx]
	* screen_keydef.c: show a message if changes is not applied
	* configure.ac: changed calls to AS_HELP_STRING -> AC_HELP_STRING
	                because the first one failed on darwin.

2004-04-19 Kalle Wallin <kaw@linux.se>
	* Added copyright notice and license notice 
	* Major cleanup of the 'screen' handling routines. The goal of this 
	  is to simplify addition of 'screens' (like a key editor).
	* added a key editor -> screen_keydef.c