@@ -1,3 +1,10 @@
+2004-06-05 Kalle Wallin <kaw@linux.se>
+	* Changed directory layout to suit future use of gettext 
+	* screen.c: Added mpd update flag [U] and display a status message
+	            when a update has finished
+	* screen.c: Display bit rate instead of time when the total time
+	            is zero and display local time when mpd is stopped.
+
 2004-05-07 Kalle Wallin <kaw@linux.se>
 	* Redesigned ncmpc's color support - view the manual for details!
 	* Added support for moving songs in a playlist (move-up, move-down)
